# bassline-junkie-dsp

./: CMakeLists.txt  README.md
examples/: render_sweep.cpp
include/bassline_junkie_dsp/: blit_oscillator.hpp  fast_trig.hpp
src/: blit_oscillator.cpp
